# tidalbar

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: tidal-api.md
src/: app.rs  artwork.rs  auth.rs  config.rs  lib.rs  main.rs  models.rs  playback.rs  tidal.rs  ui.rs
