[package]
name = "tidalbar"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A keyboard-driven terminal client for TIDAL"
license = "MIT"
readme = "README.md"
repository = "https://github.com/feoh/tidalbar"
homepage = "https://github.com/feoh/tidalbar"
keywords = ["audio", "music", "ratatui", "tidal", "tui"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
keyring = "4.1.5"
oauth2 = "5.0.0"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "1.1.3"
tracing = "0.1.44"
url = "2.5.8"
webbrowser = "1.2.1"
